--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.12.7"
+scraper = "0.20.0"
+serde = {version = "1.0.210", features = ["serde_derive"] }
+serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
