feat: add headless chrome for anilist

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ missing_panics_doc = "allow"
 missing_errors_doc = "allow"
 
 [dependencies]
+headless_chrome = "1.0.15"
 reqwest = "0.12.7"
 scraper = "0.20.0"
 serde = {version = "1.0.210", features = ["serde_derive"] }
