--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ missing_panics_doc = "allow"
 missing_errors_doc = "allow"
 
 [dependencies]
+anyhow = "1.0.89"
 headless_chrome = "1.0.15"
 reqwest = "0.12.7"
 scraper = "0.20.0"
