--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ missing_errors_doc = "allow"
 
 [dependencies]
 anyhow = "1.0.89"
+chrono = "0.4.38"
+csv = "1.3.0"
 headless_chrome = "1.0.15"
+iso8601-duration = { version = "0.2.0", features = ["chrono"] }
 reqwest = "0.12.7"
 scraper = "0.20.0"
-serde = {version = "1.0.210", features = ["serde_derive"] }
+serde = { version = "1.0.210", features = ["serde_derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
